# cs440_fall2017

./: .gitignore  Jenkinsfile  README.md
MP1/docs/: report_mp1.aux  report_mp1.out  report_mp1.tex  report_mp1.toc
MP1/scripts/: buildBundle.sh  gatherData1p1.sh  gatherData1p2.sh  gatherData1p2ec.sh  gatherData2.sh
MP1/src/: FileWrap.hpp  astar_average.cpp  astar_average.hpp  astar_blend.cpp  astar_blend.hpp  astar_convexhull.cpp  astar_convexhull.hpp  astar_convexhull_fast.cpp  astar_convexhull_fast.hpp  astar_deviation.cpp  astar_deviation.hpp  astar_euclidean.cpp  astar_euclidean.hpp  astar_heuristic.hpp  astar_manhattan.cpp  astar_manhattan.hpp  astar_manhatten.cpp  astar_manhatten.hpp  astar_nearest.cpp  astar_nearest.hpp  astar_planner.cpp  astar_planner.hpp  astar_planner_impl.hxx  bfs_planner.cpp  bfs_planner.hpp  bfs_planner.hxx  commandline_parser.cpp  convex_hull.hpp  custom_exception.hpp  dfs_planner.cpp  dfs_planner.hpp  gif_wrapper.hpp  graph.hpp  graph_impl.hxx  image.cpp  main.cpp  maze.cpp  maze.hpp  maze_io.cpp  maze_io.hpp  (+14 more)
MP2/: Makefile  matchup_5x20n.txt  matchup_8x8e.txt  matchup_8x8n.txt  sc_5x10d.txt  sc_5x10d2.txt  sc_5x10d3.txt  sc_5x10o.txt  sc_5x10o2.txt  sc_8x8d.txt  sc_8x8d2.txt  sc_8x8o.txt  sc_8x8o2.txt  soln_8x8.txt  soln_8x8_3end_defensive.txt  soln_8x8_3end_offensive.txt
MP2/docs/: game11  game12  game13  game14  game15  game16  game22  game23  game25  game26  game32  game33  input10101.txt  input10102.txt  input55.txt  input77.txt  input88.txt  out88.txt  out99.txt  report_mp2.aux  report_mp2.out  report_mp2.tex  report_mp2.toc
MP2/src/: CMakeLists.txt  FileWrap.cpp  breakthrough_actions.hpp  breakthrough_alphabeta_agent.hpp  breakthrough_cone_heuristics.hpp  breakthrough_costfunc.hpp.hpp  breakthrough_extended_rules.hpp  breakthrough_handcraft_heuristics.hpp  breakthrough_learned_heuristics.hpp  breakthrough_minimax_agent.hpp  breakthrough_piece_type.hpp  breakthrough_provided_heuristics.hpp  breakthrough_rules.hpp  breakthrough_state.hpp  breakthrough_test_games.cpp  breakthrough_test_games.hpp  breakthrough_transition_func.hpp  breakthrough_utility_ab.hpp  bt_heuristic_learning_costfunc.hpp  commandline_parser.cpp  csp_solver.cpp  csp_solver.h  flow_csp.h  flow_io.cpp  flow_io.h  flow_solver.cpp  flow_solver.h  game_agent.hpp  game_instance.hpp  graph.hpp  main.cpp  opt_callbacks.hpp  opt_pso.hpp  opt_solver.hpp  opt_test_rosenbrock2d.hpp  test_csp.h
MP3/: Makefile
MP3/docs/: report_mp3.aux  report_mp3.out  report_mp3.toc
MP3/scripts/: mp3_p11.py  mp3_p12_disjoint.py  mp3_p12_overlap.py  mp3_p1ec_faces.py  mp3_p21.py  mp3_p22.py
MP3/src/: text_color.cpp
MP4/: Makefile  Makefile_linux
MP4/MP4.1/: digitSolver.cpp  digitSolver.h  knnSolver.h  main.cpp  mp4.exe.stackdump
MP4/src/: main.cpp
MP_template/: Makefile
test_template/: Makefile
(+354 files in other folders)
